--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -4747,7 +4747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -4773,7 +4773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4795,7 +4795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4890,7 +4890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4933,7 +4933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -5099,7 +5099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -5117,7 +5117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -5215,7 +5215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -5262,7 +5262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -5376,7 +5376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -5429,7 +5429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -5470,7 +5470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -5502,7 +5502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -5524,7 +5524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -5544,7 +5544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -6356,7 +6356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -6377,7 +6377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -6498,7 +6498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6507,7 +6507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -6956,7 +6956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -6997,7 +6997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -7028,7 +7028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -7157,7 +7157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -7243,7 +7243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7252,14 +7252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1324/3030465465.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_9165/3030465465.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  null_currency_rows = n_work_df[new_work_df['Currency'].isnull()]\n"
      ]
     },
@@ -7284,7 +7284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7293,7 +7293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7302,7 +7302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -7322,14 +7322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1324/3603474730.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_9165/3603474730.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -7363,6 +7363,215 @@
     "one_df['Currency'] = one_df['Currency'].apply(lambda x: x.split('\\t')[0])\n",
     "one_df['Currency']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rate EUR European Euro => USD not available for Date latest\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rate UYU => USD not available for Date latest\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n",
+      "Error: Currency Rates Source Not Ready\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_9165/698320844.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  one_df['ConvertedCompYearly'] = one_df.apply(\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = CurrencyRates()\n",
+    "currency_rates = {}\n",
+    "\n",
+    "def get_conversion_rate(from_currency, to_currency='USD'):\n",
+    "    global currency_rates\n",
+    "\n",
+    "    if (from_currency, to_currency) not in currency_rates:\n",
+    "        try:\n",
+    "            rate = c.get_rate(from_currency, to_currency)\n",
+    "            currency_rates[(from_currency, to_currency)] = rate\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error: {e}\")\n",
+    "            currency_rates[(from_currency, to_currency)] = 1.0 \n",
+    "    return currency_rates.get((from_currency, to_currency))\n",
+    "\n",
+    "# Vectorized conversion\n",
+    "one_df['ConvertedCompYearly'] = one_df.apply(\n",
+    "    lambda row: row['CompTotal'] * get_conversion_rate(row['Currency'])\n",
+    "    if pd.isna(row['ConvertedCompYearly']) and not pd.isna(row['CompTotal']) and not pd.isna(row['Currency'])\n",
+    "    else row['ConvertedCompYearly'],\n",
+    "    axis=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CompTotal</th>\n",
+       "      <th>Currency</th>\n",
+       "      <th>ConvertedCompYearly</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.850000e+05</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2.850000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.500000e+05</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2.500000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.560000e+05</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1.560000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.320000e+06</td>\n",
+       "      <td>PHP</td>\n",
+       "      <td>2.345600e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>7.800000e+04</td>\n",
+       "      <td>GBP</td>\n",
+       "      <td>9.682800e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89175</th>\n",
+       "      <td>1.350000e+05</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1.350000e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89177</th>\n",
+       "      <td>1.000000e+06</td>\n",
+       "      <td>MXN</td>\n",
+       "      <td>5.866969e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89178</th>\n",
+       "      <td>2.120210e+05</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>2.120210e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89179</th>\n",
+       "      <td>2.000000e+05</td>\n",
+       "      <td>BRL</td>\n",
+       "      <td>4.021587e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89183</th>\n",
+       "      <td>3.300000e+09</td>\n",
+       "      <td>IRR</td>\n",
+       "      <td>3.300000e+09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>65298 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          CompTotal Currency  ConvertedCompYearly\n",
+       "1      2.850000e+05      USD         2.850000e+05\n",
+       "2      2.500000e+05      USD         2.500000e+05\n",
+       "3      1.560000e+05      USD         1.560000e+05\n",
+       "4      1.320000e+06      PHP         2.345600e+04\n",
+       "5      7.800000e+04      GBP         9.682800e+04\n",
+       "...             ...      ...                  ...\n",
+       "89175  1.350000e+05      USD         1.350000e+05\n",
+       "89177  1.000000e+06      MXN         5.866969e+04\n",
+       "89178  2.120210e+05      USD         2.120210e+05\n",
+       "89179  2.000000e+05      BRL         4.021587e+04\n",
+       "89183  3.300000e+09      IRR         3.300000e+09\n",
+       "\n",
+       "[65298 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one_df[['CompTotal', 'Currency', 'ConvertedCompYearly']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
