"filling compensation with median salary"

--- a/test.ipynb
+++ b/test.ipynb
@@ -8055,64 +8055,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "26.164660479647157"
+       "1        2.850000e+05\n",
+       "2        2.500000e+05\n",
+       "3        1.560000e+05\n",
+       "4        2.345600e+04\n",
+       "5        9.682800e+04\n",
+       "             ...     \n",
+       "89175    1.350000e+05\n",
+       "89177    1.000000e+06\n",
+       "89178    2.120210e+05\n",
+       "89179    2.000000e+05\n",
+       "89183    3.300000e+09\n",
+       "Name: ConvertedCompYearly, Length: 65298, dtype: float64"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c_df = temp_df[['CompTotal', 'Currency', 'ConvertedCompYearly']]\n",
-    "(c_df['CompTotal'].isnull().sum()/one_df.shape[0])*100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "26.164660479647157"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(c_df['ConvertedCompYearly'].isnull().sum()/one_df.shape[0])*100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.24962479708413735"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r_df = temp_df[temp_df['Employment'].str.contains('Retired', case=False)]\n",
-    "(r_df['ConvertedCompYearly'].isnull().sum()/one_df.shape[0])*100"
+    "temp_df['ConvertedCompYearly'].fillna(median_compensation_employed)"
    ]
   },
   {
@@ -8648,6 +8617,15 @@
    ],
    "source": [
     "(nr_df['ConvertedCompYearly'].isnull().sum()/one_df.shape[0])*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_df.to_csv('sample/work.csv', index=False)"
    ]
   },
   {
